assignment-5/styles/a5-navbar.css
.a5-navbar {
    display: flex;
    padding: 2% 14%;
    font-size: 18px;
}

.a5-logo {
    flex: 1;
}

.a5-nav-links {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.a5-nav-link {
    text-decoration: none;
    margin-left: 40px;
    color: #000000
}

.a5-nav-link:hover {
    color: #E4B267;
    font-weight: 500;
}

